[project]
name = "jdecompiler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "reirei", email = "noreply+0x32767@github.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
jdecompiler = "jdecompiler:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
]
